fix the KeyPoint module CSS to remove the margin-top property that was causing layout issues on smaller screens. over lapping with the header and keypoint.

--- a/src/pages/hompage/KeyPoint.module.css
+++ b/src/pages/hompage/KeyPoint.module.css
@@ -15,7 +15,6 @@
 }
 @media screen and (max-width: 600px) {
   .key-container{
-    margin-top: -50rem;
     background-color: var( --PrimaryColor);
     color: var(--SecondaryColor);
    display: flex;
@@ -33,7 +32,6 @@
 
 @media screen and (min-width: 601px) and (max-width: 1000px) {
   .key-container{
-    margin-top: -50rem;
     background-color: var( --PrimaryColor);
     color: var(--SecondaryColor);
    display: flex;
